@@ -1,3 +1,7 @@
+2005-02-09  Sebastien Bacher  <seb128@debian.org>
+
+	* Makefile.am: build e-util-marshal.c.
+
 2004-12-23  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-about-me.glade: fixed a typo (Closes: #162094).
